# proxmate

./: .gitignore  README.md  build-mac.sh  pyproject.toml
.github/workflows/: build.yml
openspec/changes/archive/2026-05-07-perf-optimization/: proposal.md
openspec/changes/archive/2026-05-07-perf-optimization/specs/cache-aware-data-access/: spec.md
openspec/changes/archive/2026-05-07-smart-gensshconfig/: tasks.md
openspec/changes/archive/2026-05-07-smart-gensshconfig/specs/ssh-config-diff/: spec.md
openspec/changes/perf-optimization/: design.md  tasks.md
openspec/changes/perf-optimization/specs/config-singleton/: spec.md
openspec/changes/smart-gensshconfig/: design.md  proposal.md
proxmate/: __init__.py
proxmate/cli/: __init__.py  create_cmd.py  ctx_cmd.py  daemon_cmd.py  init_cmd.py  list_cmd.py  main.py  ps_cmd.py  snapshot_cmd.py  sshconfig_cmd.py  status_cmd.py  template_cmd.py  update_cmd.py  vm_cmd.py
proxmate/core/: __init__.py  cache.py  cloud_images.py  config.py  daemon.py  proxmox.py  template_builder.py
proxmate/utils/: __init__.py  display.py
tests/: __init__.py
